<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.raquelgallo.pocmediaaudio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:text="@string/intro_msg"
        android:textColor="@color/colorSecondaryText"
        android:textSize="16sp" />

    <Button
        android:id="@+id/start_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/pause_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pause"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/stop_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/stop"
        android:textAllCaps="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <Button
            android:id="@+id/up_volume_btn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/plus"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/volume"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="@string/volume"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryText" />

        <Button
            android:id="@+id/down_volume_btn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/min"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>
